javascript bug squashed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto", sans-serif;
-  src: url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+  /* src: url("https://fonts.googleapis.com/css?family=Roboto&display=swap"); */
 }
 
 body {
